# CMakeTutorial

./: README.md
01/ImageLite/: CMakeLists.txt  README.md
01/ImageLite/libs/core/: CMakeLists.txt
01/ImageLite/libs/filters/: CMakeLists.txt
02/ImageLite/: CMakeLists.txt  README.md
03/ImageLite/: CMakeLists.txt  README.md
03/ImageLite/libs/core/: CMakeLists.txt
04/ImageLite/: CMakeLists.txt  README.md
05/ImageLite/: CMakeLists.txt  README.md
05/ImageLite/libs/core/: CMakeLists.txt
06/ImageLite/: CMakeLists.txt  README.md
07/ImageLite/: CMakeLists.txt  README.md
07/ImageLite/libs/core/: CMakeLists.txt
08/ImageLite/: CMakeLists.txt  README.md
08/ImageLite/libs/core/: CMakeLists.txt
08/ImageLite/libs/core/src/: image.cpp
09/ImageLite/: CMakeLists.txt  README.md
09/ImageLite/libs/core/: CMakeLists.txt
09/ImageLite/libs/filters/: CMakeLists.txt
09/ImageLite/libs/filters/src/: filters.cpp
10/ImageLite/: CMakeLists.txt  README.md
10/ImageLite/libs/core/: CMakeLists.txt
11/ImageLite/: README.md
11/ImageLite/libs/core/: CMakeLists.txt
12/ImageLite/: CMakeLists.txt  README.md
12/ImageLite/apps/cli/src/: main.cpp
12/ImageLite/libs/core/: CMakeLists.txt
12/ImageLite/libs/filters/: CMakeLists.txt
13/ImageLite/: CMakeLists.txt  README.md
13/ImageLite/apps/cli/src/: main.cpp
14/ImageLite/: CMakeLists.txt  README.md
14/ImageLite/tests/: CMakeLists.txt
15/ImageLite/: README.md
HelloCMake/: CMakeLists.txt  README.md
ImageLite/libs/core/: CMakeLists.txt
